; ModuleID = '/home/carl/AnghaBench/radare2/shlr/sdb/src/json/extr_main.c_test_main.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/sdb/src/json/extr_main.c_test_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"{\22hello\22:\22world\22}\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"hello\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"OUT: \00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"--\0A\00", align 1
@.str.5 = private unnamed_addr constant [24 x i8] c"{\22hello\22:{\22world\22:123}}\00", align 1
@.str.6 = private unnamed_addr constant [12 x i8] c"hello.world\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test_main() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @json_get(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i32 %2, i32* %1, align 4
  %3 = call i32 @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @rangstr_print(i32* %1)
  %5 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0))
  %7 = call i32 @json_get(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0))
  store i32 %7, i32* %1, align 4
  %8 = call i32 @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %9 = call i32 @rangstr_print(i32* %1)
  %10 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @json_get(i8*, i8*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @rangstr_print(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
